# AIChan

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  cli.py  cli_client.py  cli_server.py  docker-compose.yml  main.py  pyproject.toml
agent-service/: Dockerfile  pyproject.toml
agent-service/src/agent_service/: __init__.py  config.py  main.py  system-prompt.md
agent-service/src/agent_service/agent_core/: agent_core.py
agent-service/src/agent_service/app/: config.py
aichan/: main.py  pyproject.toml
aichan/agent/: pyproject.toml
aichan/agent/src/agent/: __init__.py  agent_runtime.py  prompt_templates.py  runtime_context.py  runtime_cycle.py  runtime_loop.py  runtime_rules.py  wakeup_runtime.py
aichan/core/src/core/: config.py
aichan/hub/: pyproject.toml
aichan/hub/src/hub/: __init__.py  channel_poll_trigger.py  registry_signal_trigger.py  signal_processor.py
aichan/mcp_hub/: pyproject.toml
aichan/mcp_hub/src/mcp_hub/: __init__.py  connections.py  manager.py  models.py  session.py  tools_wrapper.py  wakeup.py
aichan/registry/: __init__.py  models.py  onboarding.py  routes.py  server.py  state.py
docs/: 0.boundary.md  1.system-design.md  2.project-structure.md  3.message-loop.md  3.runtime-flow.md  agent-service.md  project-structure.md  system-design.md
gateway/channels/cli/: Dockerfile  cli_api.py  cli_gateway.py  requirements.txt
mcp_servers/cli/: Dockerfile  app.py  mcp_server.py  message_store.py  requirements.txt  server.py
mcp_servers/cli/tests/: test_mcp_server_helpers.py  test_message_store.py
(+4 files in other folders)
