[project]
name = "aichan"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "brain",
    "core",
    "fastapi>=0.118.0",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "memory",
    "nexus",
    "plugins",
    "prompt-toolkit>=3.0.36",
    "uvicorn>=0.37.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
brain = { workspace = true }
core = { workspace = true }
memory = { workspace = true }
nexus = { workspace = true }
plugins = { workspace = true }

